@@ -4,27 +4,25 @@ import com.google.maps.model.LatLng;
 import greencity.achievement.AchievementCalculation;
 import greencity.client.RestClient;
 import greencity.constant.AppConstant;
-import greencity.constant.EmailNotificationMessagesConstants;
 import greencity.constant.ErrorMessage;
 import greencity.dto.PageableAdvancedDto;
 import greencity.dto.PageableDto;
 import greencity.dto.event.AddEventDtoRequest;
 import greencity.dto.event.AddressDto;
 import greencity.dto.event.EventAttenderDto;
+import greencity.dto.event.EventAuthorDto;
 import greencity.dto.event.EventDateLocationDto;
-import greencity.dto.event.EventDateLocationPreviewDto;
 import greencity.dto.event.EventDto;
-import greencity.dto.event.EventPreviewDto;
 import greencity.dto.event.EventVO;
 import greencity.dto.event.UpdateEventDto;
 import greencity.dto.event.UpdateEventRequestDto;
 import greencity.dto.filter.FilterEventDto;
 import greencity.dto.geocoding.AddressLatLngResponse;
+import greencity.dto.notification.LikeNotificationDto;
 import greencity.dto.search.SearchEventsDto;
 import greencity.dto.tag.TagDto;
 import greencity.dto.tag.TagUaEnDto;
 import greencity.dto.tag.TagVO;
-import greencity.dto.user.AuthorDto;
 import greencity.dto.user.UserVO;
 import greencity.entity.Tag;
 import greencity.entity.User;
@@ -32,35 +30,41 @@ import greencity.entity.event.Event;
 import greencity.entity.event.EventDateLocation;
 import greencity.entity.event.EventGrade;
 import greencity.entity.event.EventImages;
-import greencity.enums.EventType;
-import greencity.enums.NotificationType;
-import greencity.enums.TagType;
-import greencity.enums.Role;
 import greencity.enums.AchievementAction;
 import greencity.enums.AchievementCategoryType;
-import greencity.enums.EventStatus;
-import greencity.enums.EventTime;
-import greencity.enums.RatingCalculationEnum;
+import greencity.enums.EventType;
+import greencity.enums.NotificationType;
+import greencity.enums.Role;
+import greencity.enums.TagType;
 import greencity.exception.exceptions.BadRequestException;
 import greencity.exception.exceptions.NotFoundException;
 import greencity.exception.exceptions.UserHasNoPermissionToAccessException;
-import greencity.message.GeneralEmailMessage;
+import greencity.mapping.events.EventDateLocationDtoMapper;
 import greencity.rating.RatingCalculation;
 import greencity.repository.EventRepo;
-import greencity.repository.EventsSearchRepo;
+import greencity.repository.RatingPointsRepo;
 import greencity.repository.UserRepo;
 import jakarta.persistence.Tuple;
+import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.ArrayUtils;
+import org.apache.commons.lang3.ObjectUtils;
+import org.modelmapper.ModelMapper;
+import org.modelmapper.TypeToken;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 import java.math.BigDecimal;
 import java.security.Principal;
 import java.sql.Date;
+import java.time.Duration;
 import java.time.Instant;
-import java.time.LocalDate;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -68,31 +72,15 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
-import lombok.RequiredArgsConstructor;
-import org.apache.commons.collections4.CollectionUtils;
-import org.apache.commons.lang3.ArrayUtils;
-import org.apache.commons.lang3.ObjectUtils;
-import org.apache.commons.lang3.StringUtils;
-import org.jetbrains.annotations.Nullable;
-import org.locationtech.jts.geom.Coordinate;
-import org.locationtech.jts.geom.GeometryFactory;
-import org.locationtech.jts.geom.Point;
-import org.locationtech.jts.geom.PrecisionModel;
-import org.modelmapper.ModelMapper;
-import org.modelmapper.TypeToken;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.multipart.MultipartFile;
 import static greencity.constant.EventTupleConstant.cityEn;
 import static greencity.constant.EventTupleConstant.cityUa;
 import static greencity.constant.EventTupleConstant.countComments;
 import static greencity.constant.EventTupleConstant.countryEn;
 import static greencity.constant.EventTupleConstant.countryUa;
 import static greencity.constant.EventTupleConstant.creationDate;
+import static greencity.constant.EventTupleConstant.currentUserGrade;
+import static greencity.constant.EventTupleConstant.description;
+import static greencity.constant.EventTupleConstant.dislikes;
 import static greencity.constant.EventTupleConstant.eventId;
 import static greencity.constant.EventTupleConstant.finishDate;
 import static greencity.constant.EventTupleConstant.formattedAddressEn;
@@ -120,37 +108,39 @@ import static greencity.constant.EventTupleConstant.tagId;
 import static greencity.constant.EventTupleConstant.tagName;
 import static greencity.constant.EventTupleConstant.title;
 import static greencity.constant.EventTupleConstant.titleImage;
-import static greencity.enums.EventType.OFFLINE;
-import static greencity.enums.EventType.ONLINE;
+import static greencity.constant.EventTupleConstant.type;
 
 @Service
+@Transactional
 @RequiredArgsConstructor
 public class EventServiceImpl implements EventService {
+    private static final String DEFAULT_TITLE_IMAGE_PATH = AppConstant.DEFAULT_EVENT_IMAGES;
     private final EventRepo eventRepo;
     private final ModelMapper modelMapper;
+    private final EventDateLocationDtoMapper eventDateLocationDtoMapper;
     private final RestClient restClient;
     private final FileService fileService;
     private final TagsService tagService;
     private final GoogleApiService googleApiService;
     private final UserService userService;
-    private final EventsSearchRepo eventsSearchRepo;
-    private final NotificationService notificationService;
-    private static final String DEFAULT_TITLE_IMAGE_PATH = AppConstant.DEFAULT_EVENT_IMAGES;
     private final UserRepo userRepo;
     private final RatingCalculation ratingCalculation;
     private final AchievementCalculation achievementCalculation;
     private final UserNotificationService userNotificationService;
+    private final RatingPointsRepo ratingPointsRepo;
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public EventDto save(AddEventDtoRequest addEventDtoRequest, String email,
         MultipartFile[] images) {
-        checkingEqualityDateTimeInEventDateLocationDto(addEventDtoRequest.getDatesLocations());
-        addAddressToLocation(addEventDtoRequest.getDatesLocations());
+        validateEventRequest(addEventDtoRequest);
         Event toSave = modelMapper.map(addEventDtoRequest, Event.class);
-        toSave.setCreationDate(LocalDate.now());
         UserVO userVO = restClient.findByEmail(email);
         User organizer = modelMapper.map(userVO, User.class);
         toSave.setOrganizer(organizer);
+        toSave.setType(getEventType(toSave.getDates()));
         if (images != null && images.length > 0 && images[0] != null) {
             toSave.setTitleImage(fileService.upload(images[0]));
             List<EventImages> eventImages = new ArrayList<>();
@@ -174,38 +164,51 @@ public class EventServiceImpl implements EventService {
         Event savedEvent = eventRepo.save(toSave);
         achievementCalculation.calculateAchievement(userVO, AchievementCategoryType.CREATE_EVENT,
             AchievementAction.ASSIGN);
-        ratingCalculation.ratingCalculation(RatingCalculationEnum.CREATE_EVENT, userVO);
-        notificationService.sendEmailNotification(GeneralEmailMessage.builder()
-            .email(organizer.getEmail())
-            .subject(EmailNotificationMessagesConstants.EVENT_CREATION_SUBJECT)
-            .message(String.format(EmailNotificationMessagesConstants.EVENT_CREATION_MESSAGE,
-                savedEvent.getTitle()))
-            .build());
+        ratingCalculation.ratingCalculation(ratingPointsRepo.findByNameOrThrow("CREATE_EVENT"), userVO);
         userNotificationService.createNewNotification(userVO, NotificationType.EVENT_CREATED, savedEvent.getId(),
             savedEvent.getTitle());
         return buildEventDto(savedEvent, organizer.getId());
     }
 
+    private EventType getEventType(List<EventDateLocation> dates) {
+        boolean hasOnlineEvent = false;
+        boolean hasOfflineEvent = false;
+
+        for (EventDateLocation date : dates) {
+            if (date.getOnlineLink() != null) {
+                hasOnlineEvent = true;
+            }
+            if (date.getAddress() != null) {
+                hasOfflineEvent = true;
+            }
+        }
+
+        if (hasOnlineEvent && hasOfflineEvent) {
+            return EventType.ONLINE_OFFLINE;
+        } else if (hasOnlineEvent) {
+            return EventType.ONLINE;
+        } else {
+            return EventType.OFFLINE;
+        }
+    }
+
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public void delete(Long eventId, String email) {
         UserVO userVO = restClient.findByEmail(email);
-        Event toDelete =
-            eventRepo.findById(eventId).orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
+        Event toDelete = eventRepo.findById(eventId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
         List<String> eventImages = new ArrayList<>();
         eventImages.add(toDelete.getTitleImage());
         if (toDelete.getAdditionalImages() != null) {
             eventImages.addAll(toDelete.getAdditionalImages().stream().map(EventImages::getLink)
-                .collect(Collectors.toList()));
+                .toList());
         }
 
         if (toDelete.getOrganizer().getId().equals(userVO.getId()) || userVO.getRole() == Role.ROLE_ADMIN) {
             deleteImagesFromServer(eventImages);
-            Set<String> attendersEmails =
-                toDelete.getAttenders().stream().map(User::getEmail).collect(Collectors.toSet());
-            notificationService.sendEmailNotification(
-                attendersEmails,
-                EmailNotificationMessagesConstants.EVENT_CANCELED_SUBJECT,
-                String.format(EmailNotificationMessagesConstants.EVENT_CANCELED_MESSAGE, toDelete.getTitle()));
             List<UserVO> userVOList = toDelete.getAttenders().stream()
                 .map(user -> modelMapper.map(user, UserVO.class))
                 .collect(Collectors.toList());
@@ -217,13 +220,16 @@ public class EventServiceImpl implements EventService {
         }
         achievementCalculation.calculateAchievement(userVO,
             AchievementCategoryType.CREATE_EVENT, AchievementAction.DELETE);
-        ratingCalculation.ratingCalculation(RatingCalculationEnum.UNDO_CREATE_EVENT, userVO);
+        ratingCalculation.ratingCalculation(ratingPointsRepo.findByNameOrThrow("UNDO_CREATE_EVENT"), userVO);
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public EventDto getEvent(Long eventId, Principal principal) {
-        Event event =
-            eventRepo.findById(eventId).orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
+        Event event = eventRepo.findById(eventId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
         if (principal != null) {
             User currentUser = modelMapper.map(restClient.findByEmail(principal.getName()), User.class);
             return buildEventDto(event, currentUser.getId());
@@ -231,221 +237,66 @@ public class EventServiceImpl implements EventService {
         return buildEventDto(event);
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
-    public PageableAdvancedDto<EventDto> getAll(Pageable page, Principal principal) {
-        Page<Event> events = eventRepo.findAllByOrderByIdDesc(page);
-
-        if (principal != null) {
-            User user = modelMapper.map(restClient.findByEmail(principal.getName()), User.class);
-            return buildPageableAdvancedDto(events, user.getId());
-        }
-        return buildPageableAdvancedDto(events);
-    }
-
-    @Override
-    public PageableAdvancedDto<EventPreviewDto> getEvents(Pageable page, Principal principal,
-        FilterEventDto filterEventDto,
-        String title) {
-        Long userId = null;
-        if (principal != null) {
-            userId = restClient.findIdByEmail(principal.getName());
-        }
-        if (title != null) {
-            title = "%" + title.toLowerCase() + "%";
-        }
-        List<Boolean> openStatuses = new ArrayList<>();
-        List<Boolean> futureTimeStatuses = new ArrayList<>();
-        String[] citiesInLower = null;
-        String[] tagsInLower = null;
-        Boolean isFavorite = null;
-        Boolean isSubscribed = null;
-        Boolean isOrganizedByUser = null;
-        if (filterEventDto != null) {
-            futureTimeStatuses = filterEventDto.getEventTime() != null && !filterEventDto.getEventTime().isEmpty()
-                ? filterEventDto.getEventTime().stream()
-                    .map(eventTime -> eventTime == EventTime.FUTURE)
-                    .collect(Collectors.toList())
-                : Collections.emptyList();
-            if (filterEventDto.getStatuses() != null && !filterEventDto.getStatuses().isEmpty()) {
-                for (EventStatus eventStatus : filterEventDto.getStatuses()) {
-                    if (eventStatus == EventStatus.OPEN) {
-                        openStatuses.add(true);
-                    } else if (eventStatus == EventStatus.CLOSED) {
-                        openStatuses.add(false);
-                    } else if (eventStatus == EventStatus.JOINED) {
-                        isSubscribed = true;
-                    } else if (eventStatus == EventStatus.CREATED) {
-                        isOrganizedByUser = true;
-                    } else if (eventStatus == EventStatus.SAVED) {
-                        isFavorite = true;
-                    }
-                }
-            }
-            citiesInLower = getArrayFromListOrNullIfEmpty(filterEventDto.getCities());
-            tagsInLower = getArrayFromListOrNullIfEmpty(filterEventDto.getTags());
+    public PageableAdvancedDto<EventDto> getEvents(Pageable page, FilterEventDto filterEventDto, Long userId) {
+        if (userId != null) {
+            restClient.findById(userId);
         }
 
-        Boolean isOpen = getBooleanIfAllMatchOrElseNull(openStatuses);
-        Boolean isRelevant = getBooleanIfAllMatchOrElseNull(futureTimeStatuses);
+        Page<Long> eventIds = eventRepo.findEventsIds(page, filterEventDto, userId);
 
-        Page<Long> eventPrewiewIdsPage;
+        if (page.getPageNumber() >= eventIds.getTotalPages() && eventIds.getTotalPages() > 0) {
+            throw new BadRequestException(
+                String.format(ErrorMessage.PAGE_NOT_FOUND_MESSAGE, page.getPageNumber(), eventIds.getTotalPages()));
+        }
+
         List<Tuple> tuples;
         if (userId != null) {
-            eventPrewiewIdsPage = eventRepo.findAllEventPreviewDtoByFilters(userId, isSubscribed,
-                isOrganizedByUser, isFavorite, title, isOpen, isRelevant, citiesInLower, tagsInLower, page);
-            tuples = eventRepo.loadEventPreviewDataByIds(eventPrewiewIdsPage.getContent(), userId);
+            tuples = eventRepo.loadEventDataByIds(eventIds.getContent(), userId);
         } else {
-            eventPrewiewIdsPage = eventRepo.findAllEventPreviewDtoByFilters(title,
-                isOpen, isRelevant, citiesInLower, tagsInLower, page);
-            tuples = eventRepo.loadEventPreviewDataByIds(eventPrewiewIdsPage.getContent());
+            tuples = eventRepo.loadEventDataByIds(eventIds.getContent());
         }
-        return new PageableAdvancedDto<>(
-            mapTupleListToEventPreviewDtoList(tuples, eventPrewiewIdsPage.toList()),
-            eventPrewiewIdsPage.getTotalElements(),
-            page.getPageNumber(),
-            eventPrewiewIdsPage.getTotalPages(),
-            eventPrewiewIdsPage.getNumber(),
-            eventPrewiewIdsPage.hasPrevious(),
-            eventPrewiewIdsPage.hasNext(),
-            eventPrewiewIdsPage.isFirst(),
-            eventPrewiewIdsPage.isLast());
+        return buildPageableAdvancedDto(eventIds, tuples, page);
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
-    public PageableAdvancedDto<EventDto> getAllUserEvents(
-        Pageable page, String email, String userLatitude, String userLongitude, EventType eventType) {
-        User participant = modelMapper.map(restClient.findByEmail(email), User.class);
-        List<Event> events = sortUserEventsByEventType(eventType, participant, userLatitude, userLongitude);
-        Page<Event> eventPage = new PageImpl<>(getEventsForCurrentPage(page, events), page, events.size());
-        return buildPageableAdvancedDto(eventPage, participant.getId());
-    }
-
-    @Override
-    public PageableAdvancedDto<EventDto> getAllFavoriteEventsByUser(Pageable page, String email) {
-        User user = modelMapper.map(restClient.findByEmail(email), User.class);
-        Page<Event> events = eventRepo.findAllFavoritesByUser(user.getId(), page);
-        return buildPageableAdvancedDto(events, user.getId());
-    }
-
-    @Override
-    public Set<AddressDto> getAllEventsAddresses() {
-        return eventRepo.findAllEventsAddresses().stream()
-            .map(eventAddress -> modelMapper.map(eventAddress, AddressDto.class))
-            .collect(Collectors.toSet());
-    }
-
-    private List<Event> getEventsForCurrentPage(Pageable page, List<Event> allEvents) {
-        int startIndex = page.getPageNumber() * page.getPageSize();
-        int endIndex = Math.min(startIndex + page.getPageSize(), allEvents.size());
-        return allEvents.subList(startIndex, endIndex);
-    }
-
-    private List<Event> sortUserEventsByEventType(
-        EventType eventType, User attender, String userLatitude, String userLongitude) {
-        if (eventType != null) {
-            if (ONLINE == eventType) {
-                return getOnlineUserEventsSortedByDate(attender);
-            } else if (OFFLINE == eventType) {
-                return (StringUtils.isNotBlank(userLatitude) && StringUtils.isNotBlank(userLongitude))
-                    ? getOfflineUserEventsSortedByUserLocation(attender, userLatitude, userLongitude)
-                    : getOfflineUserEventsSortedByDate(attender);
-            }
+    public PageableAdvancedDto<EventDto> getEventsManagement(Pageable page, FilterEventDto filterEventDto,
+        Long userId) {
+        if (userId != null) {
+            restClient.findById(userId);
         }
-        return eventRepo.findAllByAttenderOrOrganizer(attender.getId()).stream().sorted(getComparatorByDates())
-            .collect(Collectors.toList());
+
+        Page<Long> eventIds = eventRepo.findEventsIdsManagement(page, filterEventDto, userId);
+        List<Tuple> tuples;
+        if (userId != null) {
+            tuples = eventRepo.loadEventDataByIds(eventIds.getContent(), userId);
+        } else {
+            tuples = eventRepo.loadEventDataByIds(eventIds.getContent());
+        }
+        return buildPageableAdvancedDto(eventIds, tuples, page);
     }
 
-    private List<Event> getOnlineUserEventsSortedByDate(User attender) {
-        return eventRepo.findAllByAttenderOrOrganizer(attender.getId()).stream()
-            .filter(event -> event.getEventType().equals(EventType.ONLINE)
-                || event.getEventType().equals(EventType.ONLINE_OFFLINE))
-            .sorted(getComparatorByDates())
-            .collect(Collectors.toList());
-    }
-
-    private List<Event> getOfflineUserEventsSortedByDate(User attender) {
-        return eventRepo.findAllByAttenderOrOrganizer(attender.getId()).stream()
-            .filter(event -> event.getEventType().equals(EventType.OFFLINE)
-                || event.getEventType().equals(EventType.ONLINE_OFFLINE))
-            .sorted(getComparatorByDates())
-            .collect(Collectors.toList());
-    }
-
-    private List<Event> getOfflineUserEventsSortedByUserLocation(
-        User attender, String userLatitude, String userLongitude) {
-        List<Event> eventsFurtherSorted = eventRepo.findAllByAttenderOrOrganizer(attender.getId()).stream()
-            .filter(event -> event.getEventType().equals(EventType.OFFLINE)
-                || event.getEventType().equals(EventType.ONLINE_OFFLINE))
-            .sorted(getComparatorByDistance(Double.parseDouble(userLatitude), Double.parseDouble(userLongitude)))
-            .filter(Event::isRelevant)
-            .collect(Collectors.toList());
-        List<Event> eventsPassed = getOfflineUserEventsSortedByDate(attender).stream()
-            .filter(event -> !event.isRelevant())
-            .collect(Collectors.toList());
-        eventsFurtherSorted.addAll(eventsPassed);
-        return eventsFurtherSorted;
-    }
-
-    private Comparator<Event> getComparatorByDistance(final double userLatitude, final double userLongitude) {
-        return (e1, e2) -> {
-            double distance1 = calculateDistanceBetweenUserAndEventCoordinates(userLatitude, userLongitude,
-                Objects.requireNonNull(e1.getDates().get(e1.getDates().size() - 1)
-                    .getAddress()).getLatitude(),
-                Objects.requireNonNull(e1.getDates().get(e1.getDates().size() - 1)
-                    .getAddress()).getLongitude());
-            double distance2 = calculateDistanceBetweenUserAndEventCoordinates(userLatitude, userLongitude,
-                Objects.requireNonNull(e2.getDates().get(e2.getDates().size() - 1)
-                    .getAddress()).getLatitude(),
-                Objects.requireNonNull(e2.getDates().get(e2.getDates().size() - 1)
-                    .getAddress()).getLongitude());
-            return Double.compare(distance1, distance2);
-        };
-    }
-
-    private Comparator<Event> getComparatorByDates() {
-        return (e1, e2) -> e2.getDates().get(e2.getDates().size() - 1).getStartDate()
-            .compareTo(e1.getDates().get(e1.getDates().size() - 1).getStartDate());
-    }
-
-    private double calculateDistanceBetweenUserAndEventCoordinates(
-        double userLatitude, double userLongitude, double eventLatitude, double eventLongitude) {
-        GeometryFactory geometryFactory = new GeometryFactory(new PrecisionModel(), 4326);
-        Point userGeoPoint = geometryFactory.createPoint(new Coordinate(userLongitude, userLatitude));
-        Point eventGeoPoint = geometryFactory.createPoint(new Coordinate(eventLongitude, eventLatitude));
-        return userGeoPoint.distance(eventGeoPoint);
-    }
-
-    @Override
-    public PageableAdvancedDto<EventDto> getEventsCreatedByUser(Pageable page, String email) {
-        User attender = modelMapper.map(restClient.findByEmail(email), User.class);
-        Page<Event> events = eventRepo.findEventsByOrganizer(page, attender.getId());
-        return buildPageableAdvancedDto(events, attender.getId());
-    }
-
-    @Override
-    public PageableAdvancedDto<EventDto> getRelatedToUserEvents(Pageable page, String email) {
-        User attender = modelMapper.map(restClient.findByEmail(email), User.class);
-        Page<Event> events = eventRepo.findRelatedEventsByUser(page, attender.getId());
-        return buildPageableAdvancedDto(events, attender.getId());
-    }
-
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public void addAttender(Long eventId, String email) {
-        Event event =
-            eventRepo.findById(eventId).orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
+        Event event = eventRepo.findById(eventId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
         UserVO userVO = restClient.findByEmail(email);
         User currentUser = modelMapper.map(userVO, User.class);
         checkAttenderToJoinTheEvent(event, currentUser);
         event.getAttenders().add(currentUser);
         achievementCalculation.calculateAchievement(userVO,
             AchievementCategoryType.JOIN_EVENT, AchievementAction.ASSIGN);
-        ratingCalculation.ratingCalculation(RatingCalculationEnum.JOIN_EVENT, userVO);
+        ratingCalculation.ratingCalculation(ratingPointsRepo.findByNameOrThrow("JOIN_EVENT"), userVO);
         eventRepo.save(event);
-        notificationService.sendEmailNotification(GeneralEmailMessage.builder()
-            .email(event.getOrganizer().getEmail())
-            .subject(EmailNotificationMessagesConstants.EVENT_JOINED_SUBJECT)
-            .message(String.format(EmailNotificationMessagesConstants.EVENT_JOINED_MESSAGE, currentUser.getName()))
-            .build());
         userNotificationService.createNotification(modelMapper.map(event.getOrganizer(), UserVO.class), userVO,
             NotificationType.EVENT_JOINED, eventId, event.getTitle());
     }
@@ -461,19 +312,25 @@ public class EventServiceImpl implements EventService {
         }
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public void removeAttender(Long eventId, String email) {
-        Event event =
-            eventRepo.findById(eventId).orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
+        Event event = eventRepo.findById(eventId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
         UserVO userVO = restClient.findByEmail(email);
         event.setAttenders(event.getAttenders().stream().filter(user -> !user.getId().equals(userVO.getId()))
             .collect(Collectors.toSet()));
         achievementCalculation.calculateAchievement(userVO,
             AchievementCategoryType.JOIN_EVENT, AchievementAction.DELETE);
-        ratingCalculation.ratingCalculation(RatingCalculationEnum.UNDO_JOIN_EVENT, userVO);
+        ratingCalculation.ratingCalculation(ratingPointsRepo.findByNameOrThrow("UNDO_JOIN_EVENT"), userVO);
         eventRepo.save(event);
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public void addToFavorites(Long eventId, String email) {
         Event event = eventRepo.findById(eventId)
@@ -490,6 +347,9 @@ public class EventServiceImpl implements EventService {
         eventRepo.save(event);
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public void removeFromFavorites(Long eventId, String email) {
         Event event = eventRepo.findById(eventId)
@@ -509,6 +369,9 @@ public class EventServiceImpl implements EventService {
         eventRepo.save(event);
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public PageableAdvancedDto<EventDto> searchEventsBy(Pageable paging, String query) {
         Page<Event> page = eventRepo.searchEventsBy(paging, query);
@@ -517,8 +380,6 @@ public class EventServiceImpl implements EventService {
 
     /**
      * {@inheritDoc}
-     *
-     * @return EventDto
      */
     @Override
     @Transactional
@@ -550,12 +411,6 @@ public class EventServiceImpl implements EventService {
         }
         enhanceWithNewData(toUpdate, eventDto, images);
         Event updatedEvent = eventRepo.save(toUpdate);
-        Set<String> emailsToNotify = toUpdate.getAttenders().stream().map(User::getEmail).collect(Collectors.toSet());
-        emailsToNotify.add(organizer.getEmail());
-        notificationService.sendEmailNotification(
-            emailsToNotify,
-            EmailNotificationMessagesConstants.EVENT_UPDATED_SUBJECT,
-            String.format(EmailNotificationMessagesConstants.EVENT_UPDATED_MESSAGE, toUpdate.getTitle()));
         return buildEventDto(updatedEvent, organizer.getId());
     }
 
@@ -564,18 +419,22 @@ public class EventServiceImpl implements EventService {
      */
     @Override
     public void rateEvent(Long eventId, String email, int grade) {
-        Event event =
-            eventRepo.findById(eventId).orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
-        User currentUser = modelMapper.map(restClient.findByEmail(email), User.class);
+        Event event = eventRepo.findById(eventId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
+        User currentUser = userRepo.findByEmail(email)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
 
+        if (event.getOrganizer().getId().equals(currentUser.getId())) {
+            throw new UserHasNoPermissionToAccessException(ErrorMessage.USER_HAS_NO_RIGHTS_TO_RATE_EVENT);
+        }
         if (findLastEventDateTime(event).isAfter(ZonedDateTime.now())) {
             throw new BadRequestException(ErrorMessage.EVENT_IS_NOT_FINISHED);
         }
-        if (!event.getAttenders().stream().map(User::getId).collect(Collectors.toList())
+        if (!event.getAttenders().stream().map(User::getId).toList()
             .contains(currentUser.getId())) {
             throw new BadRequestException(ErrorMessage.YOU_ARE_NOT_EVENT_SUBSCRIBER);
         }
-        if (event.getEventGrades().stream().map(eventGrade -> eventGrade.getUser().getId()).collect(Collectors.toList())
+        if (event.getEventGrades().stream().map(eventGrade -> eventGrade.getUser().getId()).toList()
             .contains(currentUser.getId())) {
             throw new BadRequestException(ErrorMessage.HAVE_ALREADY_RATED);
         }
@@ -587,14 +446,20 @@ public class EventServiceImpl implements EventService {
             calculateUserEventOrganizerRating(event.getOrganizer()));
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public Set<EventAttenderDto> getAllEventAttenders(Long eventId) {
-        Event event =
-            eventRepo.findById(eventId).orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
+        Event event = eventRepo.findById(eventId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
         return event.getAttenders().stream().map(attender -> modelMapper.map(attender, EventAttenderDto.class))
             .collect(Collectors.toSet());
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public EventVO findById(Long eventId) {
         Event event = eventRepo.findById(eventId)
@@ -629,7 +494,6 @@ public class EventServiceImpl implements EventService {
         if (updateEventDto.getIsOpen() != null) {
             toUpdate.setOpen(updateEventDto.getIsOpen());
         }
-
         if (updateEventDto.getTags() != null) {
             toUpdate.setTags(modelMapper.map(tagService
                 .findTagsWithAllTranslationsByNamesAndType(updateEventDto.getTags(), TagType.EVENT),
@@ -644,12 +508,14 @@ public class EventServiceImpl implements EventService {
             eventRepo.deleteEventDateLocationsByEventId(toUpdate.getId());
             toUpdate.setDates(updateEventDto.getDatesLocations().stream()
                 .map(d -> modelMapper.map(d, EventDateLocation.class))
-                .map(d -> {
-                    d.setEvent(toUpdate);
-                    return d;
-                })
+                .map(location -> setEventToEventDateLocation(location, toUpdate))
                 .collect(Collectors.toList()));
+            toUpdate.setType(getEventType(toUpdate.getDates()));
         }
+    }
+
+    private EventDateLocation setEventToEventDateLocation(EventDateLocation location, Event e) {
+        return location.setEvent(e);
     }
 
     private void updateImages(Event toUpdate, UpdateEventDto updateEventDto, MultipartFile[] images) {
@@ -676,7 +542,7 @@ public class EventServiceImpl implements EventService {
 
         if (imagesToDelete != null && titleImage != null && imagesToDelete.contains(titleImage)) {
             List<String> additionalImages = new ArrayList<>(updateEventDto.getAdditionalImages());
-            if (additionalImages != null && !additionalImages.isEmpty()) {
+            if (!additionalImages.isEmpty()) {
                 updateEventDto.setTitleImage(additionalImages.removeFirst());
                 updateEventDto.setAdditionalImages(additionalImages);
             } else {
@@ -748,9 +614,43 @@ public class EventServiceImpl implements EventService {
         }
     }
 
+    private void validateEventRequest(AddEventDtoRequest addEventDtoRequest) {
+        checkingEqualityDateTimeInEventDateLocationDto(addEventDtoRequest.getDatesLocations());
+        if (!validateCoordinates(addEventDtoRequest.getDatesLocations())) {
+            throw new BadRequestException(ErrorMessage.INVALID_COORDINATES);
+        }
+        addAddressToLocation(addEventDtoRequest.getDatesLocations());
+    }
+
+    private boolean isValidCoordinate(double latitude, double longitude) {
+        return Math.abs(latitude) <= 90 && Math.abs(longitude) <= 180;
+    }
+
+    public boolean validateCoordinates(List<EventDateLocationDto> eventDateLocationDtos) {
+        for (EventDateLocationDto eventDateLocationDto : eventDateLocationDtos) {
+            AddressDto coordinates = eventDateLocationDto.getCoordinates();
+            EventType eventType = getEventType(eventDateLocationDtoMapper.mapAllToList(eventDateLocationDtos));
+
+            if (EventType.ONLINE == eventType) {
+                return true;
+            }
+            if (Objects.isNull(coordinates) || Objects.isNull(coordinates.getLatitude())
+                || Objects.isNull(coordinates.getLongitude())) {
+                return false;
+            }
+
+            double latitude = coordinates.getLatitude();
+            double longitude = coordinates.getLongitude();
+
+            if (!isValidCoordinate(latitude, longitude)) {
+                return false;
+            }
+        }
+        return true;
+    }
+
     private void addAddressToLocation(List<EventDateLocationDto> eventDateLocationDtos) {
-        eventDateLocationDtos
-            .stream()
+        eventDateLocationDtos.stream()
             .filter(eventDateLocationDto -> Objects.nonNull(eventDateLocationDto.getCoordinates()))
             .forEach(eventDateLocationDto -> {
                 AddressDto addressDto = eventDateLocationDto.getCoordinates();
@@ -761,46 +661,7 @@ public class EventServiceImpl implements EventService {
     }
 
     private ZonedDateTime findLastEventDateTime(Event event) {
-        return Collections
-            .max(event.getDates().stream().map(EventDateLocation::getFinishDate).collect(Collectors.toList()));
-    }
-
-    private PageableAdvancedDto<EventDto> buildPageableAdvancedDto(Page<Event> eventsPage, Long userId) {
-        List<EventDto> eventDtos = modelMapper.map(eventsPage.getContent(),
-            new TypeToken<List<EventDto>>() {
-            }.getType());
-
-        if (Objects.nonNull(eventDtos)) {
-            eventDtos.forEach(eventDto -> {
-                if (Objects.nonNull(eventDto.getOrganizer())) {
-                    Long idOrganizer = eventDto.getOrganizer().getId();
-                    if (Objects.nonNull(idOrganizer)) {
-                        boolean isOrganizedByFriend = userRepo.isFriend(idOrganizer, userId);
-                        eventDto.setOrganizedByFriend(isOrganizedByFriend);
-                    } else {
-                        eventDto.setOrganizedByFriend(false);
-                    }
-                } else {
-                    eventDto.setOrganizedByFriend(false);
-                }
-            });
-        }
-
-        if (CollectionUtils.isNotEmpty(eventDtos)) {
-            setSubscribes(eventDtos, userId);
-            setFollowers(eventDtos, userId);
-        }
-
-        return new PageableAdvancedDto<>(
-            eventDtos,
-            eventsPage.getTotalElements(),
-            eventsPage.getPageable().getPageNumber(),
-            eventsPage.getTotalPages(),
-            eventsPage.getNumber(),
-            eventsPage.hasPrevious(),
-            eventsPage.hasNext(),
-            eventsPage.isFirst(),
-            eventsPage.isLast());
+        return Collections.max(event.getDates().stream().map(EventDateLocation::getFinishDate).toList());
     }
 
     private PageableAdvancedDto<EventDto> buildPageableAdvancedDto(Page<Event> eventsPage) {
@@ -820,12 +681,26 @@ public class EventServiceImpl implements EventService {
             eventsPage.isLast());
     }
 
+    private PageableAdvancedDto<EventDto> buildPageableAdvancedDto(Page<Long> eventIds, List<Tuple> tuples,
+        Pageable pageable) {
+        return new PageableAdvancedDto<>(
+            mapTupleListToEventDtoList(tuples, eventIds.toList()),
+            eventIds.getTotalElements(),
+            pageable.getPageNumber(),
+            eventIds.getTotalPages(),
+            eventIds.getNumber(),
+            eventIds.hasPrevious(),
+            eventIds.hasNext(),
+            eventIds.isFirst(),
+            eventIds.isLast());
+    }
+
     private void setSubscribes(Collection<EventDto> eventDtos, Long userId) {
         List<Long> eventIds = eventDtos.stream().map(EventDto::getId).collect(Collectors.toList());
         List<Event> subscribedEvents = eventRepo.findSubscribedAmongEventIds(eventIds, userId);
         List<Long> subscribedEventIds = subscribedEvents.stream()
             .map(Event::getId)
-            .collect(Collectors.toList());
+            .toList();
         eventDtos.forEach(eventDto -> eventDto.setSubscribed(subscribedEventIds.contains(eventDto.getId())));
     }
 
@@ -834,16 +709,21 @@ public class EventServiceImpl implements EventService {
         List<Event> followedEvents = eventRepo.findFavoritesAmongEventIds(eventIds, userId);
         List<Long> followedEventIds = followedEvents.stream()
             .map(Event::getId)
-            .collect(Collectors.toList());
+            .toList();
         eventDtos.forEach(eventDto -> eventDto.setFavorite(followedEventIds.contains(eventDto.getId())));
     }
 
     private EventDto buildEventDto(Event event, Long userId) {
         EventDto eventDto = modelMapper.map(event, EventDto.class);
-
+        Integer currentUserGrade = event.getEventGrades()
+            .stream()
+            .filter(g -> g.getUser() != null && g.getUser().getId().equals(userId))
+            .map(EventGrade::getGrade)
+            .findFirst()
+            .orElse(null);
         setFollowers(List.of(eventDto), userId);
         setSubscribes(List.of(eventDto), userId);
-
+        eventDto.setCurrentUserGrade(currentUserGrade);
         return eventDto;
     }
 
@@ -851,22 +731,18 @@ public class EventServiceImpl implements EventService {
         return modelMapper.map(event, EventDto.class);
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
-    public PageableDto<SearchEventsDto> search(String searchQuery, String languageCode) {
-        Page<Event> page = eventsSearchRepo.find(PageRequest.of(0, 3), searchQuery, languageCode);
-        return getSearchNewsDtoPageableDto(page);
-    }
-
-    @Override
-    public PageableDto<SearchEventsDto> search(Pageable pageable, String searchQuery, String languageCode) {
-        Page<Event> page = eventsSearchRepo.find(pageable, searchQuery, languageCode);
-        return getSearchNewsDtoPageableDto(page);
+    public PageableDto<SearchEventsDto> search(Pageable pageable, String searchQuery, Boolean isFavorite, Long userId) {
+        return getSearchNewsDtoPageableDto(eventRepo.find(pageable, searchQuery, isFavorite, userId));
     }
 
     private PageableDto<SearchEventsDto> getSearchNewsDtoPageableDto(Page<Event> page) {
         List<SearchEventsDto> searchEventsDtos = page.stream()
-            .map(events -> modelMapper.map(events, SearchEventsDto.class))
-            .collect(Collectors.toList());
+            .map(event -> modelMapper.map(event, SearchEventsDto.class))
+            .toList();
 
         return new PageableDto<>(
             searchEventsDtos,
@@ -875,55 +751,169 @@ public class EventServiceImpl implements EventService {
             page.getTotalPages());
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
-    public Long getAmountOfOrganizedAndAttendedEventsByUserId(Long userId) {
-        return eventRepo.getAmountOfOrganizedAndAttendedEventsByUserId(userId);
+    public List<AddressDto> getAllEventsAddresses() {
+        return eventRepo.findAllEventsAddresses().stream()
+            .map(eventAddress -> modelMapper.map(eventAddress, AddressDto.class))
+            .toList();
     }
 
-    private Boolean getBooleanIfAllMatchOrElseNull(List<Boolean> list) {
-        Boolean result = null;
-        if (list.isEmpty()) {
-            return null;
-        }
-        if (list.stream().allMatch(s -> s)) {
-            result = true;
-        } else if (list.stream().noneMatch(s -> s)) {
-            result = false;
-        }
-        return result;
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public Long getCountOfAttendedEventsByUserId(Long userId) {
+        return eventRepo.countDistinctByAttendersId(userId);
     }
 
-    @Nullable
-    private List<EventPreviewDto> mapTupleListToEventPreviewDtoList(List<Tuple> page, List<Long> sortedIds) {
-        Map<Long, EventPreviewDto> eventsMap = new HashMap<>();
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public Long getCountOfOrganizedEventsByUserId(Long userId) {
+        return eventRepo.countDistinctByOrganizerId(userId);
+    }
+
+    @Override
+    public void like(Long eventId, UserVO userVO) {
+        Event event = findEventId(eventId);
+        User eventAuthor = getEventAuthor(event);
+        boolean isAuthor = Objects.nonNull(event.getOrganizer()) && event.getOrganizer().getId().equals(userVO.getId());
+
+        if (isAuthor) {
+            throw new BadRequestException(ErrorMessage.USER_HAS_NO_PERMISSION);
+        }
+
+        if (removeLikeIfExists(event, userVO, eventAuthor)) {
+            return;
+        }
+
+        removeDislikeIfExists(event, userVO);
+
+        event.getUsersLikedEvents().add(modelMapper.map(userVO, User.class));
+        achievementCalculation.calculateAchievement(userVO, AchievementCategoryType.LIKE_EVENT,
+            AchievementAction.ASSIGN);
+        ratingCalculation.ratingCalculation(ratingPointsRepo.findByNameOrThrow("LIKE_EVENT"), userVO);
+
+        sendEventLikeNotification(eventAuthor, userVO, eventId, event);
+
+        eventRepo.save(event);
+    }
+
+    @Override
+    public void dislike(UserVO userVO, Long eventId) {
+        Event event = findEventId(eventId);
+        boolean isAuthor = Objects.nonNull(event.getOrganizer()) && event.getOrganizer().getId().equals(userVO.getId());
+
+        if (isAuthor) {
+            throw new BadRequestException(ErrorMessage.USER_HAS_NO_PERMISSION);
+        }
+
+        removeLikeIfExists(event, userVO, getEventAuthor(event));
+
+        if (removeDislikeIfExists(event, userVO)) {
+            eventRepo.save(event);
+            return;
+        }
+
+        event.getUsersDislikedEvents().add(modelMapper.map(userVO, User.class));
+
+        eventRepo.save(event);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public int countLikes(Long eventId) {
+        Event event = eventRepo.findById(eventId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND_BY_ID + eventId));
+        return event.getUsersLikedEvents().size();
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public int countDislikes(Long eventId) {
+        Event event = eventRepo.findById(eventId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND_BY_ID + eventId));
+        return event.getUsersDislikedEvents().size();
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public boolean isEventLikedByUser(Long eventId, UserVO userVO) {
+        Event event = eventRepo.findById(eventId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND_BY_ID + eventId));
+        return event.getUsersLikedEvents().stream().anyMatch(u -> u.getId().equals(userVO.getId()));
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public boolean isEventDislikedByUser(Long eventId, UserVO userVO) {
+        Event event = eventRepo.findById(eventId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND_BY_ID + eventId));
+        return event.getUsersDislikedEvents().stream().anyMatch(u -> u.getId().equals(userVO.getId()));
+    }
+
+    private void sendEventLikeNotification(User targetUser, UserVO actionUser, Long eventId, Event event) {
+        final LikeNotificationDto likeNotificationDto = LikeNotificationDto.builder()
+            .targetUserVO(modelMapper.map(targetUser, UserVO.class))
+            .actionUserVO(actionUser)
+            .newsId(eventId)
+            .newsTitle(event.getTitle())
+            .notificationType(NotificationType.EVENT_LIKE)
+            .secondMessageText(event.getTitle())
+            .isLike(true)
+            .build();
+        userNotificationService.createOrUpdateLikeNotification(likeNotificationDto);
+    }
+
+    private List<EventDto> mapTupleListToEventDtoList(List<Tuple> page, List<Long> sortedIds) {
+        Map<Long, EventDto> eventsMap = new HashMap<>();
         Map<Long, Set<TagDto>> tagsMap = new HashMap<>();
+        List<EventDto> sortedDtos = new ArrayList<>();
         for (Tuple tuple : page) {
             long id = tuple.get(eventId, Long.class);
-            EventPreviewDto eventPreviewDto;
+            EventDto eventDto;
             if (!eventsMap.containsKey(id)) {
-                eventPreviewDto = EventPreviewDto.builder()
+                eventDto = EventDto.builder()
                     .id(id)
                     .title(tuple.get(title, String.class))
-                    .organizer(
-                        new AuthorDto(tuple.get(organizerId, Long.class), tuple.get(organizerName, String.class)))
+                    .description(tuple.get(description, String.class))
+                    .organizer(EventAuthorDto.builder()
+                        .id(tuple.get(organizerId, Long.class))
+                        .name(tuple.get(organizerName, String.class))
+                        .build())
                     .creationDate(tuple.get(creationDate, Date.class).toLocalDate())
                     .titleImage(tuple.get(titleImage, String.class))
                     .isOpen(tuple.get(isOpen, Boolean.class))
+                    .type(EventType.valueOf(tuple.get(type, String.class)))
                     .isRelevant(tuple.get(isRelevant, Boolean.class))
-                    .likes(tuple.get(likes, Long.class))
-                    .countComments(tuple.get(countComments, Long.class))
+                    .likes(Math.toIntExact(tuple.get(likes, Long.class)))
+                    .dislikes(Math.toIntExact(tuple.get(dislikes, Long.class)))
+                    .countComments(Math.toIntExact(tuple.get(countComments, Long.class)))
                     .isOrganizedByFriend(tuple.get(isOrganizedByFriend, Boolean.class))
                     .isFavorite(tuple.get(isFavorite, Boolean.class))
                     .isSubscribed(tuple.get(isSubscribed, Boolean.class))
                     .eventRate(tuple.get(grade, BigDecimal.class) != null
                         ? tuple.get(grade, BigDecimal.class).doubleValue()
                         : 0.0)
-                    .dates(new HashSet<>())
+                    .currentUserGrade(tuple.get(currentUserGrade, Integer.class))
+                    .dates(new ArrayList<>())
                     .tags(new ArrayList<>())
                     .build();
-                eventsMap.put(id, eventPreviewDto);
+                eventsMap.put(id, eventDto);
             } else {
-                eventPreviewDto = eventsMap.get(id);
+                eventDto = eventsMap.get(id);
             }
             AddressDto addressDto = AddressDto.builder()
                 .latitude(tuple.get(latitude, Double.class))
@@ -946,7 +936,7 @@ public class EventServiceImpl implements EventService {
                 addressDto.getHouseNumber(), addressDto.getFormattedAddressEn(), addressDto.getFormattedAddressUa())) {
                 addressDto = null;
             }
-            eventPreviewDto.getDates().add(EventDateLocationPreviewDto.builder()
+            eventDto.getDates().add(EventDateLocationDto.builder()
                 .startDate(ZonedDateTime.ofInstant(tuple.get(startDate, Instant.class), ZoneId.systemDefault()))
                 .finishDate(ZonedDateTime.ofInstant(tuple.get(finishDate, Instant.class), ZoneId.systemDefault()))
                 .onlineLink(tuple.get(onlineLink, String.class))
@@ -960,46 +950,101 @@ public class EventServiceImpl implements EventService {
                 .build());
             tagsMap.put(id, tagDtos);
         }
-        List<EventPreviewDto> sortedDtos = new ArrayList<>();
         for (Long id : sortedIds) {
-            // Temporary mapping in TagUaEnDto
+            EventDto eventDto = eventsMap.get(id);
             Set<TagDto> tags = tagsMap.get(id);
-            TagDto enTag =
-                tags.stream().filter(t -> t.getLanguageCode().equalsIgnoreCase("en")).findAny().orElse(new TagDto());
-            TagDto uaTag =
-                tags.stream().filter(t -> t.getLanguageCode().equalsIgnoreCase("ua")).findAny().orElse(new TagDto());
-            TagUaEnDto tagUaEnDto = TagUaEnDto.builder()
-                .id(enTag.getId())
-                .nameEn(enTag.getName())
-                .nameUa(uaTag.getName())
-                .build();
-            EventPreviewDto eventPreviewDto = eventsMap.get(id);
-            eventPreviewDto.setTags(List.of(tagUaEnDto));
-            sortedDtos.add(eventPreviewDto);
-        }
-        return sortedDtos;
-    }
+            List<TagUaEnDto> tagUaEnDtos = new ArrayList<>();
 
-    @Nullable
-    private String[] getArrayFromListOrNullIfEmpty(List<String> list) {
-        if (list != null) {
-            return !list.isEmpty()
-                ? list.stream().map(String::toLowerCase).toArray(String[]::new)
-                : null;
+            Map<Long, List<TagDto>> groupedTags = tags.stream()
+                .collect(Collectors.groupingBy(TagDto::getId));
+
+            groupedTags.forEach((tagId, tagList) -> {
+                Map<String, TagDto> uaEnMap = new HashMap<>();
+                tagList.stream()
+                    .filter(tag -> !uaEnMap.containsKey(tag.getLanguageCode()))
+                    .forEach(tag -> uaEnMap.put(tag.getLanguageCode(), tag));
+                if (uaEnMap.containsKey("ua") && uaEnMap.containsKey("en")) {
+                    TagUaEnDto tagUaEnDto = TagUaEnDto.builder()
+                        .id(tagId)
+                        .nameUa(uaEnMap.get("ua").getName())
+                        .nameEn(uaEnMap.get("en").getName())
+                        .build();
+                    tagUaEnDtos.add(tagUaEnDto);
+                }
+            });
+            eventDto.setTags(tagUaEnDtos);
+            sortedDtos.add(eventDto);
         }
-        return null;
+        sortedDtos.forEach(event -> {
+            List<EventDateLocationDto> uniqueDates = event.getDates().stream()
+                .distinct()
+                .toList();
+            event.setDates(uniqueDates);
+        });
+        return sortedDtos;
     }
 
     private void checkingEqualityDateTimeInEventDateLocationDto(List<EventDateLocationDto> eventDateLocationDtos) {
         if (eventDateLocationDtos != null && !eventDateLocationDtos.isEmpty()) {
-            eventDateLocationDtos
-                .stream()
-                .filter(eventDateLocationDto -> eventDateLocationDto.getStartDate()
-                    .isEqual(eventDateLocationDto.getFinishDate()))
+            eventDateLocationDtos.stream()
+                .filter(eventDateLocationDto -> Duration.between(
+                    eventDateLocationDto.getStartDate(),
+                    eventDateLocationDto.getFinishDate()).toMinutes() < 30)
                 .findAny()
                 .ifPresent(eventDateLocationDto -> {
-                    throw new IllegalArgumentException(ErrorMessage.SAME_START_TIME_AND_FINISH_TIME_IN_EVENT_DATE);
+                    throw new IllegalArgumentException(ErrorMessage.INVALID_DURATION_BETWEEN_START_AND_FINISH);
                 });
         }
+    }
+
+    private Event findEventId(Long id) {
+        return eventRepo.findById(id)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND_BY_ID + id));
+    }
+
+    private User getEventAuthor(Event event) {
+        if (event.getOrganizer() != null) {
+            return userRepo.findById(event.getOrganizer().getId()).orElseThrow(
+                () -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_ID + event.getOrganizer().getId()));
+        }
+        return null;
+    }
+
+    /**
+     * Removes a like from the event if the user has already liked it. Returns true
+     * if a like was removed, false otherwise.
+     */
+    private boolean removeLikeIfExists(Event event, UserVO userVO, User eventAuthor) {
+        boolean userLiked = event.getUsersLikedEvents().stream()
+            .anyMatch(user -> user.getId().equals(userVO.getId()));
+
+        if (userLiked) {
+            event.getUsersLikedEvents().removeIf(user -> user.getId().equals(userVO.getId()));
+            achievementCalculation.calculateAchievement(userVO, AchievementCategoryType.LIKE_EVENT,
+                AchievementAction.DELETE);
+            ratingCalculation.ratingCalculation(ratingPointsRepo.findByNameOrThrow("UNDO_LIKE_EVENT"), userVO);
+
+            if (eventAuthor != null) {
+                userNotificationService.removeActionUserFromNotification(
+                    modelMapper.map(eventAuthor, UserVO.class), userVO, event.getId(), NotificationType.EVENT_LIKE);
+            }
+            return true;
+        }
+        return false;
+    }
+
+    /**
+     * Removes a dislike from the event if the user has already disliked it. Returns
+     * true if a dislike was removed, false otherwise.
+     */
+    private boolean removeDislikeIfExists(Event event, UserVO userVO) {
+        boolean userDisliked = event.getUsersDislikedEvents().stream()
+            .anyMatch(user -> user.getId().equals(userVO.getId()));
+
+        if (userDisliked) {
+            event.getUsersDislikedEvents().removeIf(user -> user.getId().equals(userVO.getId()));
+            return true;
+        }
+        return false;
     }
 }
